syntax = "proto3";

package org.hypertrace.tag.config.service.v1;

option java_multiple_files = true;

import "org/hypertrace/tag/config/service/v1/tag.proto";

service TagConfigService {

  // create tag
  rpc CreateTag(CreateTagRequest) returns (CreateTagResponse) {}

  // get tag by id
  rpc GetTag(GetTagRequest) returns (GetTagResponse) {}

  // get all tags
  rpc GetTags(GetTagsRequest) returns (GetTagsResponse) {}

  // update tag
  rpc UpdateTag(UpdateTagRequest) returns (UpdateTagResponse) {}

  // delete tag by id
  rpc DeleteTag(DeleteTagRequest) returns (DeleteTagResponse) {}

}

message CreateTagRequest {
  CreateTag tag = 1;
}

message CreateTagResponse {
  Tag tag = 1;
}

message GetTagRequest {
  string id = 1;
}

message GetTagResponse {
  Tag tag = 1;
}

message GetTagsRequest {
}

message GetTagsResponse {
  repeated Tag tags = 1;
}

message UpdateTagRequest {
  Tag tag = 1;
}

message UpdateTagResponse {
  Tag tag = 1;
}

message DeleteTagRequest {
  string id = 1;
}

message DeleteTagResponse {
}
